# EzLogger

./: CMakeLists.txt  README.md  amalgamate.py
example/: CMakeLists.txt  example.cpp
include/EzLogger/: EzLogger.h
include/ezlog/: color.hpp  core.hpp  detail.hpp  ezlog.h  ezlog.hpp  platform.hpp
single_include/ezlog/: ezlog.h  ezlog.hpp  ezlog_small.hpp
src/: detail.cpp  ezlog.cpp  platform.cpp
src/detail/: color_ansi.hpp  color_win32.hpp  quick_print.cpp
src/platform/: platform.cpp  platform.hpp
